<resources>
    <string name="app_name">Bee Recording</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_home">Home</string>
    <string name="title_notes">Notes</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_capital">Capital</string>
    <string name="title_information">Information</string>
    <string name="press_again_exit_app">Press again to exit</string>

    <string name="error_message_email">Email Required</string>
    <string name="error_message_password">Password Required</string>

    <string name="ticker_symbol">Ticker Symbol</string>
    <string name="price">Price</string>

    <string name="font_size">16dp</string>


</resources>
