<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/ic_notes_black_24dp"
        android:title="@string/title_notes" />

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_transaction_black_24dp"
        android:title="@string/title_transaction" />

    <item
        android:id="@+id/navigation_capital"
        android:icon="@drawable/ic_capital_black_24dp"
        android:title="@string/title_capital" />

    <item
        android:id="@+id/navigation_information"
        android:icon="@drawable/ic_information_black_24dp"
        android:title="@string/title_information" />

</menu>
